Bugzilla Bug 281158: make WillBitBlit return nsresult instead of void to work around an internal compiler error of Visual C++ 6.0 SP5 (without Processor Pack) and SP6, and eMbedded Visual C++ 4.0 SP4. r=dougt,sr=dbaron Modified files: nsViewManager.cpp nsViewManager.h